<?xml version="1.0" encoding="utf-8"?><!-- android:icon="@drawable/common_google_signin_btn_icon_dark" -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/drawer_menu_home" />
        <item
            android:id="@+id/nav_reviewers"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/drawer_menu_reviewers" />
        <item
            android:id="@+id/nav_performance"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/drawer_menu_performance" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/drawer_menu_settings" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/drawer_menu_exit" />
    </group>
</menu>